test/positive/feature_protectedconstructors.java

public class feature_protectedconstructors {
  protected feature_protectedconstructors() {}
}

