test/negative/feature_omittedconstructor.java

  public class feature_omittedconstructor {
    /* public feature_omittedconstructor() {} */
  }

